feat(gen-ai): Add MaaS models and tokens APIs to BFF (#5042)
